[package]
name = "wasmwarthog"
version = "0.1.1"
authors = ["warthogfrance <warthogfrance@proton.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
k256 = { version = "0.13.4", features = ["ecdsa-core"] }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
sha2 = "0.10.8"
ripemd = "0.1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
